--- a/package.json
+++ b/package.json
@@ -8,13 +8,20 @@
     "build": "vite build",
     "preview": "vite preview",
     "api": "node src/Caching/server.js",
-    "dev:all": "concurrently -k -n \"vite,api\" -c \"blue,green\" \"npm run dev\" \"npm run api\""
+    "dev:all": "concurrently -k -n \"vite,api\" -c \"blue,green\" \"npm run dev\" \"npm run api\"",
+    "test": "vitest",
+    "test:run": "vitest run"
   },
   "devDependencies": {
+    "@vue/test-utils": "^2.4.6",
     "concurrently": "^9.2.1",
-    "vite": "^7.2.4"
+    "happy-dom": "^20.6.1",
+    "jsdom": "^28.1.0",
+    "vite": "^7.2.4",
+    "vitest": "^4.0.18"
   },
   "dependencies": {
+    "@vitejs/plugin-vue": "^6.0.4",
     "json-server": "^1.0.0-beta.5"
   }
 }
