--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,5 +34,5 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run localPosts test
-        run: npm run test:run -- src/tests/localPosts.test.js
+      - name: Run tests
+        run: npm run test:run
